--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
-<html>
+<html lang="pl">
 <head>
+
 	<meta charset="utf-8">
+	<title> cos tam </title>
 	
 </head>
-<title> cos tam </title>
 <body>
-hello world
+
+	<h1>hello world!</h1>
+
 </body>
 
 
