--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-
+<div class="container"></div>
 	<h1>hello world! main changed</h1>
 	<h2>Projekt do nauki nic sensownego</h2>
 
