--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div class="container" style="color : red"> </div>
 	<h1>hello world! main changed</h1>
 	<h2>Projekt do nauki nic sensownego</h2>
+	<p> Janusz Bazant </p>
 
 </body>
 
