--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container" style="color : red"> </div>
 	<h1>hello world! main changed</h1>
 	<h2>Projekt do nauki nic sensownego</h2>
-
+	<P> Zapraszam na discorda </p>
 </body>
 
 
